# openAirBearing

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lint.yml  unittests.yml
.openairbearing-cache/: cache.db
examples/: ex00_run_app_local.py  ex01_circular_baseline.py  ex02_circular_geometry_error_comparison.py  ex03_rectangular_velocity_comparison.py  ex04_custom_geometry_function.py  ex05_experimental_comparison.py  ex06_circular_tilt_sweep.py  ex07_journal_geometry_error_comparison.py
examples/ex05_experiment_data/: bearing_k_0.2MPa.csv  bearing_k_0.4MPa.csv  bearing_k_0.6MPa.csv  bearing_p_0.2MPa.csv  bearing_p_0.4MPa.csv  bearing_p_0.6MPa.csv  bearing_q_0.2MPa.csv  bearing_q_0.4MPa.csv  bearing_q_0.6MPa.csv  bearing_w_0.2MPa.csv  bearing_w_0.4MPa.csv  bearing_w_0.6MPa.csv
openairbearing/: __init__.py  bearings.py  fem_utils.py  mesh.py  plots.py  solution_analytic.py  solution_fem.py  utils.py
openairbearing/app/: app.py  ui_callbacks.py  ui_config.py  ui_export_utils.py  ui_form_schema.py  ui_layouts.py  ui_plots.py  ui_state.py  ui_styles.py
openairbearing/app/assets/: pressure2d_wheel.js  style.css  theme.css
tests/: test_callbacks.py  test_examples.py  test_export_utils.py  test_plots.py  test_plots_mpl_styles.py  test_solvers.py  test_ui_state.py  test_utils.py
