[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openairbearing"
dynamic = ["version"]
description = "A Python package for externally pressurized air bearing analysis."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Mikael Miettinen", email = "mikael.miettinen@iki.fi" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=2.18.2,<3.0.0",
    "jax>=0.6.2",
    "matplotlib>=3.8.0,<4.0.0",
    "numpy>=2.2.3,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
    "scikit-fem>=12.0.1",
    "scipy>=1.7.0,<2.0.0",
]

[project.optional-dependencies]
ui = [
    "dash>=2.18.2,<3.0.0",
    "plotly>=6.0.0,<7.0.0",
    "celery[redis]>=5.4.0,<6.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "multiprocess>=0.70.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/Aalto-Arotor/openAirBearing"
"Online demo" = "https://www.openairbearing.com"

[project.scripts]
openairbearing = "openairbearing.app.app:main"

# --- Setuptools specific configuration ---
[tool.setuptools.packages.find]
exclude = ["examples*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "openairbearing.__version__"}

[tool.setuptools.package-data]
"openairbearing.app" = ["assets/*"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
